fixed whitespace

--- a/tribute_page/styles.css
+++ b/tribute_page/styles.css
@@ -26,13 +26,28 @@ h2 {
   text-align: justify;
 }
 
+#tribute-info-1, #tribute-info-2, .title1, .title2 {
+  padding-left: 40%;
+  padding-right: 40%;
+}
+
+#title {
+  font-size: 5em;
+}
+
+#title, .caption {
+  color: black;
+  font-weight: bold;
+  font-variant-caps: all-small-caps;
+}
+
 h1 {
   text-align: center;
   color: white;
   padding-top: 40px;
   padding-bottom: 40px;
   font-size: 3em;
-  background-color: #070738;
+  background-color: #dedede;
   display: block;
   margin: 0;
   width: 100vw;
@@ -56,7 +71,7 @@ h1 {
 }
 
 #img-caption {
-  background-color: #070738;
+  background-color: #dedede;
   color: white;
   padding: 20px;
   margin: 0;
@@ -68,8 +83,18 @@ h1 {
 .caption {
   margin: 0 auto;
   width: 700px;
+  font-size: 1.5rem;
+  padding-left: 40%;
+  padding-right: 40%;
 }
 
 .title1 {
   margin-top: 90px;
+}
+
+#info {
+  padding-left: 40%;
+  padding-right: 40%;
+  padding-bottom: 3rem;
+  padding-top: 2rem;
 }
